# pico-export-desktop

./: .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  setup-gh-secrets.sh  test-config.json  vite.config.ts
.claude/: settings.local.json
.github/actions/setup-linux-tauri/: action.yml
.github/actions/setup-macos-tauri/: action.yml
.github/actions/setup-tauri/: action.yml
.github/actions/setup-windows-tauri/: action.yml
.github/workflows/: build-macos-dmg.yml  cache-warmup.yml  ci.yml  release-all.yml  release-linux.yml  release-macos-test.yml  release-macos.yml  release-windows.yml  release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/Resources/: README.txt
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: checkpoint.rs  commands.rs  config.rs  downloader.rs  main.rs  obs_client.rs  scheduler.rs
src/components/: DownloadComplete.tsx  DownloadProgress.tsx  Header.tsx  SettingsPanel.tsx  Sidebar.tsx  TaskImport.tsx  TaskPreview.tsx  index.ts
src/stores/: downloadStore.ts  settingsStore.ts
src/types/: index.ts
