[package]
name = "pico-export-desktop"
version = "1.0.0"
description = "Pico Export Desktop - 跨平台数据下载工具"
authors = ["Pico Team"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.0", features = ["shell-open", "dialog", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sled = "0.34"
reqwest = { version = "0.11", features = ["json", "stream"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
directories = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
